--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -226,14 +226,14 @@ main {
   max-width: 75em;
 }
 
-article a[href^='http'] {
+main a[href^='http'] {
     background: url('../svg/external-link.svg') no-repeat left center;
     background-size: 10px 10px;
     display: inline-block; 
     padding-left: 15px;
 }
 
-article code {
+code {
 	display: block;
 	white-space: pre;
 	white-space: pre-wrap;
@@ -256,38 +256,38 @@ article:last-child {
 	border-bottom-style: none;
 }
 
-article h1 {
+main h1 {
   margin-top: 1em;
 }
 
-article h2 {
+main h2 {
   margin-top: 0.8em;
 }
 
-article h3 {
+main h3 {
 	margin-top: 0.6em;
 }
 
-article h4 {
+main h4 {
 	margin-top: 0.4em;
 }
 
-article ul {
+main ul {
+	margin-left: 0.2em;
+	line-height: 1.5;
+}
+
+main ol {
 	margin-left: 2.2em;
 	line-height: 1.5;
 }
 
-article ol {
-	margin-left: 2.2em;
-	line-height: 1.5;
-}
-
-article p {
+main p {
   margin-top: 0.8em;
   line-height: 1.5;
 }
 
-article ul li {
+main ul li {
   padding-left: 0.5em;
   line-height: 1.5;
 }
@@ -301,9 +301,6 @@ article.article_info {
 	margin-bottom: 2em;
 }
 
-article p {
-        line-height: 1.7;
-}
 
 .alert {
 	border-style: solid;
