--- a/templates/skel/flash.html
+++ b/templates/skel/flash.html
@@ -1,4 +1,4 @@
-{{define "front/flash"}}
+{{define "skel/flash"}}
 {{if .ErrorMsg}}
 	<div style="margin-top: 10px" class="alert alert-danger" role="status">{{.ErrorMsg}}</div>
 {{end}}
