--- a/templates/skel/header.html
+++ b/templates/skel/header.html
@@ -1,4 +1,4 @@
-{{define "front/header"}}
+{{define "skel/header"}}
 <!DOCTYPE html>
 
 <html{{if Language}} lang="{{Language}}"{{end}}>
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<h1 class="header-text">{{PageTitle}} {{if SubTitle}} | {{SubTitle}}{{end}}</h1>
+		<h1 class="header-text">{{PageTitle}}</h1>
 	</header>
 
 	<nav>
