--- a/templates/front/article/articles.html
+++ b/templates/front/article/articles.html
@@ -1,7 +1,7 @@
 {{define "front/articles"}}
-{{template "front/header" .}}
+{{template "skel/header" .}}
 <main>
-	{{template "front/flash" .}}
+	{{template "skel/flash" .}}
 
 	{{if not .ErrorMsg}}
 		{{if not .articles}}
@@ -13,7 +13,7 @@
 	<article>
 		<h2 class="article_link"><a href="/article/{{.SlugEscape}}">{{.Headline}}</a></h2>
 		<p class="article_info">written by {{.Author.DisplayName}} on {{.PublishedOn.Time | FormatDate}}</p>
-		
+
 		{{.Content | ParseMarkdown}}
 	</article>
 
@@ -22,5 +22,5 @@
 
 	{{PaginationBar .pagination}}
 </main>
-{{template "front/footer"}}
+{{template "skel/footer"}}
 {{end}}
