changed directory layout for templates

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,5 +1,5 @@
 {{define "admin/login"}}
-{{template "admin/head_login"}}
+{{template "admin/login_head"}}
 <body>
 	<div class="container">
 		<div class="lw-login col-md-6 col-md-offset-3">
