--- a/templates/admin/profile_edit.html
+++ b/templates/admin/profile_edit.html
@@ -1,4 +1,4 @@
-{{define "admin/user_profile"}}
+{{define "admin/profile_edit"}}
 {{template "admin/head" .}}
 <div class="container-fluid">
 	<div class="row">
