--- a/templates/admin/user_add.html
+++ b/templates/admin/user_add.html
@@ -1,4 +1,4 @@
-{{define "admin/user_new"}}
+{{define "admin/user_add"}}
 {{template "admin/head" .}}
 <div class="container-fluid">
 	<div class="row">
