--- a/templates/front/site.html
+++ b/templates/front/site.html
@@ -1,6 +1,7 @@
 {{define "front/site"}}
 
-{{template "skel/header" .}}
+{{template "front/header" .}}
+{{template "front/navigation" .}}
 
 <main>
 	{{template "skel/flash" .}}
