--- a/templates/skel/pagination.html
+++ b/templates/skel/pagination.html
@@ -1,4 +1,4 @@
-{{define "admin/pagination"}}
+{{define "skel/pagination"}}
 {{if .pagination}}
 <div style="text-align: center">
 	<div class="lw-pagination">
