--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,13 +1,12 @@
 /*
- * Base structure
- */
+* Admin specific styles
+
 
 * {
     margin: 0;
     padding: 0;
 }
 
-/* Move down content because we have a fixed navbar that is 50px tall */
 body {
     padding-top: 50px;
     font-family: 'DejaVu Serif', 'Open Sans', sans-serif;
@@ -48,27 +47,15 @@ td > a:focus {
 	text-decoration: none;
 }
 
-/*
- * Global add-ons
- */
 .sub-header {
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
 }
 
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
 .navbar-fixed-top {
     border: 0;
 }
 
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
 .sidebar {
     position: fixed;
     top: 51px;
@@ -78,14 +65,13 @@ td > a:focus {
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content.
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
 }
 
-/* Sidebar navigation */
 .nav-sidebar {
-    margin-right: -21px; /* 20px padding + 1px border */
+    margin-right: -21px;
     margin-bottom: 20px;
     margin-left: -20px;
 }
@@ -101,10 +87,6 @@ td > a:focus {
 }
 
 
-/*
- * Main content
- */
-
 .main {
     margin-bottom: 20px;
     padding: 20px 40px 40px 40px;
@@ -113,9 +95,6 @@ td > a:focus {
     margin-top: 0;
 }
 
-/*
- * Placeholder dashboard
- */
 .placeholders {
     margin-bottom: 30px;
     text-align: center;
@@ -153,4 +132,4 @@ td > a:focus {
   padding: 0.5em;
   background-color: #f5f5f5;
   text-align: center;
-}
+}*/
