--- a/templates/admin/site_add.html
+++ b/templates/admin/site_add.html
@@ -1,26 +1,30 @@
-{{define "admin/new_article"}}
+{{define "admin/site_add"}}
 {{template "admin/head" .}}
 
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-3 col-lg-2 sidebar">
-		{{template "admin/navigation" .}}
+			{{template "admin/navigation" .}}
 		</div>
 
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-		<h1 class="page-header">Write an article</h1>
-
+			<h1 class="page-header">Add a new site</h1>
 			{{template "admin/flash" .}}
 
-			<form action="/admin/article/new" method="post">
+			<form action="/admin/site/new" method="post">
 				<div class="form-group">
-					<label for="headline">Headline</label>
-					<input type="text" class="form-control" id="headline" name="headline" placeholder="Headline..." {{if .article.Headline}}value="{{.article.Headline}}"{{end}} required>
+					<label for="title">Title</label>
+					<input type="text" class="form-control" id="title" name="title" placeholder="Title..." {{if .site.Title}}value="{{.site.Title}}"{{end}} required>
+				</div>
+
+				<div class="form-group">
+					<label for="site">Link</label>
+					<input type="text" class="form-control" id="link" name="link" placeholder="Link..." {{if .site.Link}}value="{{.site.Link}}"{{end}} required>
 				</div>
 
 				<div class="form-group">
 					<label for="content">Content</label>
-					<textarea class="form-control" rows="25" id="content" name="content" placeholder="Content...">{{.article.Content}}</textarea>
+					<textarea class="form-control" rows="25" id="content" name="content" placeholder="Content...">{{.site.Content}}</textarea>
 				</div>
 
 				{{ .csrfField }}
