--- a/templates/admin/site_edit.html
+++ b/templates/admin/site_edit.html
@@ -1,4 +1,4 @@
-{{define "admin/edit_article"}}
+{{define "admin/site_edit"}}
 {{template "admin/head" .}}
 <div class="container-fluid">
 	<div class="row">
@@ -7,14 +7,19 @@
 		</div>
 
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			<h1 class="page-header">Update article</h1>
+			<h1 class="page-header">Update site</h1>
 			{{template "admin/flash" .}}
 
-		{{with .article}}
-			<form action="/admin/article/edit/{{.ID}}" method="post">
+		{{with .site}}
+			<form action="/admin/site/edit/{{.ID}}" method="post">
 				<div class="form-group">
-					<label for="headline">Headline</label>
-					<input type="text" class="form-control" value="{{.Headline}}" id="headline" name="headline" placeholder="Headline..." required>
+					<label for="headline">Title</label>
+					<input type="text" class="form-control" value="{{.Title}}" id="title" name="title" placeholder="Title..." required>
+				</div>
+
+				<div class="form-group">
+					<label for="headline">Link</label>
+					<input type="text" class="form-control" value="{{.Link}}" id="link" name="link" placeholder="Link..." required>
 				</div>
 
 				<div class="form-group">
