--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -50,7 +50,7 @@ p {
 }
 
 
-a:hover, 
+a:hover,
 a:focus {
 	text-decoration: underline;
 }
@@ -229,7 +229,7 @@ main {
 main a[href^='http'] {
     background: url('../svg/external-link.svg') no-repeat left center;
     background-size: 10px 10px;
-    display: inline-block; 
+    display: inline-block;
     padding-left: 15px;
 }
 
@@ -312,7 +312,7 @@ article.article_info {
 	font-weight:bold;
 }
 
-/* Index page */ 
+/* Index page */
 #index .menu {
 	list-style-type: none;
 }
@@ -343,4 +343,26 @@ article.article_info {
 
 .alert-success {
   background-color: #90EE90;
+}
+
+table {
+	display: table;
+	border-collapse:collapse;
+	width: 100%;
+}
+
+th {
+	font-weight: bold;
+	border-bottom: 2px solid black;
+	text-align: left;
+	padding: 10px 0;
+}
+
+tr {
+	padding: 10px;
+}
+
+td {
+	text-align: left;
+	padding: 5px 0;
 }
