--- a/templates/admin/action.html
+++ b/templates/admin/action.html
@@ -1,5 +1,5 @@
 {{define "admin/action"}}
-{{template "admin/head" .}}
+{{template "admin/header" .}}
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-3 col-lg-2 sidebar">
