--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -11,7 +11,7 @@
 					</div>
 
 					<div class="login_body">
-					{{template "admin/flash" .}}
+					{{template "skel/flash" .}}
 
 					<div class="form-group">
 						<label for="username" class="col-sm-2 control-label">Username</label>
