--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -35,7 +35,7 @@ h2 {
 }
 
 h3 {
-	font-size: 1.50em;
+	font-size: 1.5em;
 	margin-bottom: 0.7em;
 	margin-top: 0.7em;
 }
@@ -45,44 +45,14 @@ a {
 }
 
 p {
-    line-height: 1.5;
-    margin-bottom: 1em;
+	font-size: 1.1em;
+	line-height: 1.5;
+	margin-bottom: 1em;
 }
-
 
 a:hover,
 a:focus {
 	text-decoration: underline;
-}
-
-[class^="icon-"],
-[class*=" icon-"] {
-	display: inline-block;
-	font-family: 'icomoon';
-	font-size: 1.75em;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: normal;
-	line-height: 1;
-	speak: none;
-	text-transform: none;
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-.icon-circle-right:before {
-  content: "\ea42";
-}
-
-.icon-navigation {
-	color: black;
-	margin: 0 0.5em;
-	position: relative;
-}
-.icon-navigationToggle {
-	left: 0.2em;
-	top: 0.4em;
 }
 
 body {
@@ -105,13 +75,13 @@ main {
 }
 @media (min-width: 75em) {
     main {
-	max-width: 75em;
+		max-width: 75em;
     }
 }
 
 @media (min-width: 120em) {
     main {
-	max-width: 156em;
+		max-width: 156em;
     }
 }
 
@@ -148,17 +118,17 @@ nav {
 
 @media (max-width: 37em) {
     header {
-	display: none;
+		display: none;
     }
 
     main {
-	top: 0;
+		top: 0;
     }
 
     nav {
-	position: static;
-	width: 100%;
-	height: 100%;
+		position: static;
+		width: 100%;
+		height: 100%;
     }
 }
 
@@ -200,26 +170,6 @@ nav a.active {
 	padding: 1em 0;
 }
 
-#pagination .btn {
-	background-color: #285e8e;
-	color: #fffaf0;
-	margin: 0.4em;
-	padding: 0.625em 1em;
-	margin-top: 1em;
-	border-color: #285e8e;
-	border-radius: 0;
-	border-style: solid;
-	border-width: 0.125rem;
-}
-
-
-#pagination .btn-inactive {
-    background-color: #fffaf0;
-    color: black;
-    pointer-events: none;
-    cursor: default;
-    text-decoration: none;
-}
 
 /* Main content */
 main {
@@ -342,7 +292,7 @@ article.article_info {
 }
 
 .alert-success {
-  background-color: #90EE90;
+	background-color: #90EE90;
 }
 
 table {
@@ -365,4 +315,84 @@ tr {
 td {
 	text-align: left;
 	padding: 5px 0;
+}
+
+/**
+ * Forms
+ */
+label {
+	display: block;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+
+input:not([type='submit']), textarea, select {
+	background-color: #fffaf0;
+	border: 1px solid grey;
+	font-size: 1.1em;
+	margin: 0 0 10px 0; 
+	padding: 0.5em;
+	font-family: 'dosis', sans-serif;
+	-webkit-box-sizing: border-box; /* For legacy WebKit based browsers */
+	-moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
+	box-sizing: border-box;
+	width: 100%;
+}
+
+input#headline {
+	font-size: 1.8em;
+	font-weight: 600;
+	color: #285e8e;
+}
+
+button {
+	cursor: pointer;
+	background-color: #285e8e;
+	color: #fffaf0;
+	margin: 0.4em;
+	padding: 0.625em 1em;
+	margin-top: 1em;
+	border-color: #285e8e;
+	border-radius: 0;
+	border-style: solid;
+	border-width: 0.125rem;
+}
+
+button:hover, button:focus {
+	background-color: #3c4ee5;
+}
+
+.button-group {
+	margin-bottom: 5em;
+}
+
+.button-group button {
+	float: right;
+}
+
+.button {
+	float: right;
+	background-color: #285e8e;
+	color: #fffaf0;
+	margin: 0.4em;
+	padding: 0.625em 1em;
+	margin-top: 1em;
+	border-color: #285e8e;
+	border-radius: 0;
+	border-style: solid;
+	border-width: 0.125rem;
+}
+
+
+.button-inactive {
+    background-color: #fffaf0;
+    color: black;
+    pointer-events: none;
+    cursor: default;
+    text-decoration: none;
+}
+
+.action-data a:not(:first-child) {
+	padding: 0 5px;
+	border-left: 1px solid black;
 }
