--- a/templates/admin/action.html
+++ b/templates/admin/action.html
@@ -1,36 +1,30 @@
 {{define "admin/action"}}
 {{template "admin/header" .}}
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-3 col-lg-2 sidebar">
-				{{template "admin/navigation" .}}
-			</div>
+{{template "admin/navigation" .}}
 
-			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-				<h1 class="page-header">{{.action.Title}}</h1>
+<main>
+	<h2>{{.action.Title}}</h2>
 
-				{{template "admin/flash" .}}
+	{{template "skel/flash" .}}
 
-			{{with .action}}
-				<form action="{{.ActionURL}}" method="post">
+	{{with .action}}
+		<form action="{{.ActionURL}}" method="post">
 
-					{{if .WarnMsg}}
-						<div class="alert alert-warning" role="alert"><p>{{.WarnMsg}}</p></div>
-					{{end}}
-
-					<div class="alert alert-info" role="alert"><p>{{.Description}}</p></div>
-
-					{{ $.csrfField }}
-
-					<a href="{{.BackLinkURL}}" style="margin-left: 5px" class="btn pull-right btn-danger" role="button" aria-disabled="true">No</a>
-					<button type="submit" name="action" value="yes" class="btn pull-right btn-success">Yes</button>
-				</form>
+			{{if .WarnMsg}}
+				<div class="alert alert-warning" role="alert"><p>{{.WarnMsg}}</p></div>
 			{{end}}
-			</div>
-		</div>
-	</div>
 
-	{{template "admin/footer"}}
+			<div class="alert alert-info" role="alert"><p>{{.Description}}</p></div>
+
+			{{ $.csrfField }}
+			
+			<button type="submit" name="action" value="yes" class="button">Yes</button>
+			<a href="{{.BackLinkURL}}" class="button" role="button" aria-disabled="true">No</a>
+		</form>
+	{{end}}
+</main>
+
+{{template "admin/footer"}}
 
 {{end}}
 
