--- a/templates/admin/article_add.html
+++ b/templates/admin/article_add.html
@@ -1,38 +1,29 @@
 {{define "admin/article_add"}}
-{{template "admin/head" .}}
+{{template "admin/header" .}}
+{{template "admin/navigation" .}}
+<main>
+	{{template "skel/flash"}}
 
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-3 col-lg-2 sidebar">
-		{{template "admin/navigation" .}}
+    <h2>Write an article</h2>
+
+    <form action="/admin/article/new" method="post">
+	    <div class="form-group">
+		    <label for="headline">Headline</label>
+		    <input type="text" class="form-control" id="headline" name="headline" placeholder="Headline..." {{if .article.Headline}}value="{{.article.Headline}}"{{end}} required>
+	    </div>
+
+	    <div class="form-group">
+		    <label for="content">Content</label>
+		    <textarea class="form-control" rows="25" id="content" name="content" placeholder="Content...">{{.article.Content}}</textarea>
+	    </div>
+
+	    {{ .csrfField }}
+
+	    <div class="button-group">
+			<button name="action" value="save" class="button">Save</button>
+			<button name="action" formtarget="_blank" value="preview" class="button">Preview</button>
 		</div>
-
-		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-		<h1 class="page-header">Write an article</h1>
-
-			{{template "admin/flash" .}}
-
-			<form action="/admin/article/new" method="post">
-				<div class="form-group">
-					<label for="headline">Headline</label>
-					<input type="text" class="form-control" id="headline" name="headline" placeholder="Headline..." {{if .article.Headline}}value="{{.article.Headline}}"{{end}} required>
-				</div>
-
-				<div class="form-group">
-					<label for="content">Content</label>
-					<textarea class="form-control" rows="25" id="content" name="content" placeholder="Content...">{{.article.Content}}</textarea>
-				</div>
-
-				{{ .csrfField }}
-
-				<button name="action" value="save" class="btn btn-primary" style="margin-left: 10px; float:right">Save</button>
-				<button name="action" formtarget="_blank" value="preview" class="btn btn-primary" style="margin-left: 10px; float:right">Preview</button>
-			</form>
-		</div>
-	</div>
-</div>
-
+    </form>
+</main>
 {{template "admin/footer"}}
-
 {{end}}
-
