--- a/templates/admin/article_edit.html
+++ b/templates/admin/article_edit.html
@@ -1,35 +1,31 @@
 {{define "admin/article_edit"}}
-{{template "admin/head" .}}
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-3 col-lg-2 sidebar">
-			{{template "admin/navigation" .}}
-		</div>
+{{template "admin/header" .}}
+{{template "admin/navigation" .}}
 
-		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			<h1 class="page-header">Update article</h1>
-			{{template "admin/flash" .}}
+<main>
+	{{template "skel/flash"}}
+	<h2>Update article</h2>
 
-		{{with .article}}
-			<form action="/admin/article/edit/{{.ID}}" method="post">
-				<div class="form-group">
-					<label for="headline">Headline</label>
-					<input type="text" class="form-control" value="{{.Headline}}" id="headline" name="headline" placeholder="Headline..." required>
-				</div>
+	{{with .article}}
+		<form action="/admin/article/edit/{{.ID}}" method="post">
+			<div class="form-group">
+				<label for="headline">Headline</label>
+				<input type="text" class="form-control" value="{{.Headline}}" id="headline" name="headline" placeholder="Headline..." required>
+			</div>
 
-				<div class="form-group">
-					<label for="content">Content</label>
-					<textarea class="form-control" rows="25" id="content" name="content">{{.Content}}</textarea>
-				</div>
+			<div class="form-group">
+				<label for="content">Content</label>
+				<textarea class="form-control" rows="25" id="content" name="content">{{.Content}}</textarea>
+			</div>
 
-				{{ $.csrfField }}
-
-				<button name="action" value="save" class="btn btn-primary" style="margin-left: 10px; float:right">Save</button>
-				<button name="action" formtarget="_blank" value="preview" class="btn btn-primary" style="margin-left: 10px; float:right">Preview</button>
-			</form>
-		{{end}}
-		</div>
-	</div>
-</div>
+			{{ $.csrfField }}
+			
+			<div class="button-group">
+				<button name="action" value="save" class="button">Save</button>
+				<button name="action" formtarget="_blank" value="preview" class="button">Preview</button>
+			</div>
+		</form>
+	{{end}}
+</main>
 {{template "admin/footer"}}
 {{end}}
