--- a/templates/admin/file_upload.html
+++ b/templates/admin/file_upload.html
@@ -1,36 +1,28 @@
 {{define "admin/file_upload"}}
-{{template "admin/head" .}}
+{{template "admin/header" .}}
+{{template "admin/navigation" .}}
+<main>
+	{{template "skel/flash" .}}
+	
+	<h2>Upload a file</h2>
 
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-3 col-lg-2 sidebar">
-			{{template "admin/navigation" .}}
+	<form enctype="multipart/form-data" action="/admin/file/upload" method="post">
+		<div class="form-group">
+			<label for="file">File</label>
+			<input type="file" class="form-control" id="file" name="file" placeholder="Choose a file" required>
 		</div>
 
-
-		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			<h1 class="page-header">Upload a file</h1>
-
-			{{template "admin/flash" .}}
-
-			<form enctype="multipart/form-data" action="/admin/file/upload" method="post">
-				<div class="form-group">
-					<label for="file">File</label>
-					<input type="file" class="form-control" id="file" name="file" placeholder="Choose a file" required>
-				</div>
-
-				<div class="form-group">
-					<label for="content">Optional change filename (do not include extension)</label>
-					<input type="text" class="form-control" id="newfilename" name="newfilename" placeholder="New filename...">
-				</div>
-
-				{{ .csrfField }}
-
-				<button name="action" value="upload" class="btn btn-primary" style="margin-left: 10px; float:right">Upload</button>
-			</form>
+		<div class="form-group">
+			<label for="content">Optional change filename (do not include extension)</label>
+			<input type="text" class="form-control" id="newfilename" name="newfilename" placeholder="New filename...">
 		</div>
-	</div>
-</div>
 
+		{{ .csrfField }}
+		
+		<div class="button-group">
+			<button name="action" value="upload" class="button">Upload</button>
+		</div>
+	</form>
+</main>
 {{template "admin/footer"}}
 {{end}}
