--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -1,64 +1,47 @@
 {{define "admin/users"}}
 
-{{template "admin/head" .}}
+{{template "admin/header" .}}
+{{template "admin/navigation" .}}
+<main>
+	{{template "skel/flash" .}}
+	
+	<h2>User management</h2>
 
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-3 col-lg-2 sidebar">
-			{{template "admin/navigation" .}}
-		</div>
+	<p><a href="/admin/user/new" class="btn btn-default btn-md">Add a user</a></p>
 
-		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			<h1 class="page-header">User management</h1>
+	<table class="table">
+		<thead>
+			<tr>
+			<th>Last modified</th>
+			<th>Username</th>
+			<th>E-mail</th>
+			<th>Display name</th>
+			<th>Active</th>
+			<th>Admin</th>
+			<th>Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{range .users}}
+				<tr>
+					<td>{{.LastModified | FormatDateTime}}</td>
+					<td>{{.Username}}</td>
+					<td>{{.Email}}</td>
+					<td>{{.DisplayName}}</td>
+					<td>{{.Active | BoolToIcon}}</td>
+					<td>{{.IsAdmin | BoolToIcon}}</td>
+					<td class="action-data">
+						<a href="/admin/user/edit/{{.ID}}" title="Edit">Edit</a>
+						<a href="/admin/user/delete/{{.ID}}" title="Remove">Remove</a>
+					</td>
+				</tr>
+			{{end}}
+		</tbody>
+	</table>
 
-			{{template "admin/flash" .}}
+	{{template "skel/pagination" .}}
 
-			<p>
-				<a href="/admin/user/new" class="btn btn-default btn-md">
-					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Add a user
-				</a>
-			</p>
-
-			<table class="table">
-				<thead>
-					<tr>
-					<th>Last modified</th>
-					<th>Username</th>
-					<th>E-mail</th>
-					<th>Display name</th>
-					<th>Active</th>
-					<th>Admin</th>
-					<th>Actions</th>
-					</tr>
-				</thead>
-				<tbody>
-					{{range .users}}
-						<tr>
-							<td>{{.LastModified | FormatDateTime}}</td>
-							<td>{{.Username}}</td>
-							<td>{{.Email}}</td>
-							<td>{{.DisplayName}}</td>
-							<td>{{.Active | BoolToIcon}}</td>
-							<td>{{.IsAdmin | BoolToIcon}}</td>
-							<td>
-								<a href="/admin/user/edit/{{.ID}}" title="Edit">
-									<span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-								</a>
-
-								<a href="/admin/user/delete/{{.ID}}" title="Remove">
-									<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-								</a>
-							</td>
-						</tr>
-					{{end}}
-				</tbody>
-			</table>
-
-			{{template "admin/pagination" .}}
-
-		</div>
-	</div>
-</div>
+</main>
 
 {{template "admin/footer"}}
 
