--- a/templates/front/error.html
+++ b/templates/front/error.html
@@ -1,8 +1,9 @@
-{{define "skel/error"}}
-{{template "skel/header" .}}
+{{define "front/error"}}
+{{template "front/header" .}}
 <main>
 	<section class="max--width">
 		<h2>Error</h2>
+
 		{{template "skel/flash" .}}
 	</section>
 </main>
