--- a/templates/admin/nav.html
+++ b/templates/admin/nav.html
@@ -1,22 +1,26 @@
 {{define "admin/navigation"}}
 <nav>
 	<ul>
-		<li {{if .active}}{{if eq .active "articles"}}class="active"{{end}}{{end}}>
-			<a href="/admin/articles">Articles</a>
+		<li >
+			<a{{if .active}}{{if eq .active "articles"}} class="active" {{end}}{{end}} href="/admin/articles">Articles</a>
 		</li>
 
 	{{if .currentUser.IsAdmin}}
-		<li {{if .active}}{{if eq .active "users"}}class="active"{{end}}{{end}}>
-			<a href="/admin/users">Users</a>
+		<li>
+			<a{{if .active}}{{if eq .active "users"}} class="active" {{end}}{{end}} href="/admin/users">Users</a>
 		</li>
 
-		<li {{if .active}}{{if eq .active "sites"}}class="active"{{end}}{{end}}>
-			<a href="/admin/sites">Sites</a>
+		<li>
+			<a{{if .active}}{{if eq .active "sites"}} class="active" {{end}}{{end}} href="/admin/sites">Sites</a>
 		</li>
 	{{end}}
 
-		<li {{if .active}}{{if eq .active "files"}}class="active"{{end}}{{end}}>
-			<a href="/admin/files">Files</a>
+		<li>
+			<a{{if .active}}{{if eq .active "files"}} class="active" {{end}}{{end}} href="/admin/files">Files</a>
+		</li>
+
+		<li>
+			<a{{if .active}}{{if eq .active "profile"}} class="active" {{end}}{{end}} href="/admin/user/profile">My profile</a>
 		</li>
 
 		<li>
