--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -5,7 +5,7 @@
 <main>
 	{{template "skel/flash" .}}
 
-	<h2>My profile</h2>
+	<h2>Edit profile</h2>
 
 	{{with .user}}
 		<form action="/admin/user/profile" method="post">
