--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -41,6 +41,11 @@ h3 {
 }
 
 a {
+	text-decoration: underline;
+}
+
+a:hover,
+a:focus {
 	text-decoration: none;
 }
 
@@ -50,10 +55,6 @@ p {
 	margin-bottom: 1em;
 }
 
-a:hover,
-a:focus {
-	text-decoration: underline;
-}
 
 body {
 	background-color: #fffaf0;
@@ -392,7 +393,31 @@ button:hover, button:focus {
     text-decoration: none;
 }
 
-.action-data a:not(:first-child) {
+.action-data button:not(:first-child), .action-data a:not(:first-child) {
 	padding: 0 5px;
+	text-align: center;
 	border-left: 1px solid black;
+}
+
+.action-data form {
+  display: inline;
+}
+
+.action-data button {
+  background: none;
+  border: none;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+  font-size: 1em;
+  font-family: serif;
+}
+
+.action-data button:focus {
+  outline: none;
+  text-decoration: none;
+}
+
+.action-data button:active {
+  color:red;
 }
