--- a/templates/admin/user_add.html
+++ b/templates/admin/user_add.html
@@ -1,5 +1,5 @@
 {{define "admin/user_add"}}
-{{template "admin/head" .}}
+{{template "admin/header" .}}
 {{template "admin/navigation" .}}
 <main>
 	{{template "skel/flash" .}}
