--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -346,7 +346,8 @@ input#headline {
 	color: #285e8e;
 }
 
-button {
+button, 
+input[type='submit'] {
 	cursor: pointer;
 	background-color: #285e8e;
 	color: #fffaf0;
@@ -359,7 +360,8 @@ button {
 	border-width: 0.125rem;
 }
 
-button:hover, button:focus {
+button:hover, button:focus,
+input[type='submit']:hover, input[type='submit']:focus {
 	background-color: #3c4ee5;
 }
 
@@ -367,7 +369,8 @@ button:hover, button:focus {
 	margin-bottom: 5em;
 }
 
-.button-group button {
+.button-group button,
+.button-group input {
 	float: right;
 }
 
@@ -412,6 +415,8 @@ button:hover, button:focus {
   cursor: pointer;
   font-size: 1em;
   font-family: serif;
+  margin: 0;
+  padding: 0 5px;
 }
 
 .action-data button:focus,
