--- a/templates/admin/forgot_password.html
+++ b/templates/admin/forgot_password.html
@@ -1,40 +1,28 @@
 {{define "admin/forgot_password"}}
 
-{{template "admin/head_login"}}
-
+{{template "admin/header"}}
 <body>
-	<div class="container">
-		<div class="lw-login col-md-6 col-md-offset-3">
-			<main>
-				<form action="/admin/forgot-password" method="POST" class="form-horizontal">
-					<div class="login_wrapper">
-						<div class="login_header">
-							<h4>Password reset</h4>
-						</div>
+	<main>
+		<form action="/admin/forgot-password" method="POST">
+				<h2>Password reset</h2>
 
-						<div class="login_body">
-							{{template "admin/flash" .}}
+				{{template "skel/flash" .}}
 
-							<div class="form-group">
-								<label for="email" class="col-sm-2 control-label">email address</label>
-								<div class="col-sm-10">
-									<input type="email" required="required" class="form-control" name="email" id="email" value="{{.user.Email}}" placeholder="email...">
-								</div>
-							</div>
-
-							{{ .csrfField }}
-
-							<div class="form-group">
-								<div class="col-sm-offset-2 col-sm-10">
-									<input type="submit" class="btn btn-primary pull-right" value="Send reset instruction">
-								</div>
-							</div>
-						</div>
+				<div class="form-group">
+					<label for="email" class="col-sm-2 control-label">E-mail</label>
+					<div class="col-sm-10">
+						<input type="email" required="required" class="form-control" name="email" id="email" value="{{.user.Email}}" placeholder="email...">
 					</div>
-				</form>
-			</main>
-		</div>
-	</div>
+				</div>
+
+				{{ .csrfField }}
+
+				<div class="button-group">
+					<input type="submit" class="btn btn-primary pull-right" value="Send reset instruction">
+				</div>
+			</div>
+		</form>
+	</main>
 </body>
 </html>
 {{end}}
