--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,52 +1,39 @@
 {{define "admin/login"}}
-{{template "admin/login_head"}}
+{{template "admin/header"}}
 <body>
-	<div class="container">
-		<div class="lw-login col-md-6 col-md-offset-3">
-			<main>
-			<form action="/admin" method="POST" class="form-horizontal">
-				<div class="login_wrapper">
-					<div class="login_header">
-						<h4>Login</h4>
-					</div>
+	<main>
+		<form action="/admin" method="POST" class="form-horizontal">
+			<h2>Login</h2>
 
-					<div class="login_body">
-					{{template "skel/flash" .}}
+			{{template "skel/flash" .}}
 
-					<div class="form-group">
-						<label for="username" class="col-sm-2 control-label">Username</label>
-						<div class="col-sm-10">
-							<input type="text" required="required" class="form-control" name="username" id="username" value="{{.user.Username}}" placeholder="Username...">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label for="password" class="col-sm-2 control-label">Password</label>
-						<div class="col-sm-10">
-							<input type="password" required="required" autocomplete="off" class="form-control" name="password" id="password" placeholder="Password...">
-						</div>
-					</div>
-
-					{{if .state}}
-						<input type="hidden" required="required" class="form-control" name="state" value="{{.state}}">
-					{{end}}
-
-					{{ .csrfField }}
-
-						<div class="form-group">
-							<div class="col-sm-offset-2 col-sm-10">
-								<input type="submit" class="btn btn-primary pull-right" value="Login">
-							</div>
-						</div>
-					</div>
+			<div class="form-group">
+				<label for="username" class="col-sm-2 control-label">Username</label>
+				<div class="col-sm-10">
+					<input type="text" required="required" class="form-control" name="username" id="username" value="{{.user.Username}}" placeholder="Username...">
 				</div>
-			</form>
+			</div>
 
-				<a class="pull-right" style="margin: 5px" href="/admin/forgot-password" title="forgottenPassword">Forgot password?</a>
+			<div class="form-group">
+				<label for="password" class="col-sm-2 control-label">Password</label>
+				<div class="col-sm-10">
+					<input type="password" required="required" autocomplete="off" class="form-control" name="password" id="password" placeholder="Password...">
+				</div>
+			</div>
 
-			</main>
-		</div>
-	</div>
+			{{if .state}}
+				<input type="hidden" required="required" class="form-control" name="state" value="{{.state}}">
+			{{end}}
+
+			{{ .csrfField }}
+
+			<div class="button-group">
+				<input type="submit" value="Login">
+			</div>
+		</form>
+
+		<a style="float:right; margin: 5px" href="/admin/forgot-password" title="forgottenPassword">Forgot password?</a>
+	</main>
 </body>
 </html>
 {{end}}
