--- a/templates/admin/footer.html
+++ b/templates/admin/footer.html
@@ -1,7 +1,7 @@
 {{define "admin/footer"}}
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 footer">
+<footer>
 	<p>Version: {{AppVersion}}</p>
-</div>
+</footer>
 
 <script type="text/javascript">
 
