--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -86,6 +86,24 @@ main {
     }
 }
 
+footer {
+	position:fixed;
+	bottom: 0;
+	left: 17.5rem;
+	width: 100%;
+	height: 30px;
+	background-color: #1f1f1f;
+	color: #ffffff;
+	font-size: 0.7em;
+	font-weight: bold;
+}
+
+footer p {
+	padding-top: 5px;
+	padding-left: 5px;
+	margin: auto;
+}
+
 /* Header */
 header {
 	height: 5rem;
@@ -174,7 +192,7 @@ nav a.active {
 
 /* Main content */
 main {
-  max-width: 75em;
+	max-width: 75em;
 }
 
 main a[href^='http'] {
@@ -183,6 +201,7 @@ main a[href^='http'] {
     display: inline-block;
     padding-left: 15px;
 }
+
 
 code {
 	display: block;
