not found handler for admin and front

--- a/templates/admin/error.html
+++ b/templates/admin/error.html
@@ -1,5 +1,5 @@
 {{define "admin/error"}}
-{{template "admin/header" .}}
+{{template "admin/header"}}
 {{template "admin/navigation" .}}
 <main>
 		<h2>An error occured</h2>
