--- a/templates/front/error.html
+++ b/templates/front/error.html
@@ -1,5 +1,7 @@
 {{define "front/error"}}
 {{template "front/header" .}}
+{{template "front/navigation" .}}
+
 <main>
 	<section class="max--width">
 		<h2>Error</h2>
