removed bootstrap classes

--- a/templates/admin/action.html
+++ b/templates/admin/action.html
@@ -18,7 +18,7 @@
 
 			{{ $.csrfField }}
 			
-			<button type="submit" name="action" value="yes" class="button">Yes</button>
+			<button type="submit" name="action" value="yes">Yes</button>
 			<a href="{{.BackLinkURL}}" class="button" role="button" aria-disabled="true">No</a>
 		</form>
 	{{end}}
