--- a/templates/admin/forgot_password.html
+++ b/templates/admin/forgot_password.html
@@ -8,17 +8,13 @@
 
 				{{template "skel/flash" .}}
 
-				<div class="form-group">
-					<label for="email" class="col-sm-2 control-label">E-mail</label>
-					<div class="col-sm-10">
-						<input type="email" required="required" class="form-control" name="email" id="email" value="{{.user.Email}}" placeholder="email...">
-					</div>
-				</div>
+				<label for="email">E-mail</label>
+				<input type="email" required="required" name="email" id="email" value="{{.user.Email}}" placeholder="email...">
 
 				{{ .csrfField }}
 
 				<div class="button-group">
-					<input type="submit" class="btn btn-primary pull-right" value="Send reset instruction">
+					<input type="submit" value="Send reset instruction">
 				</div>
 			</div>
 		</form>
