--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -1,45 +1,25 @@
 {{define "admin/reset_password"}}
-{{template "admin/head_login"}}
+{{template "admin/header"}}
 <body>
-	<div class="container">
-		<div class="lw-login col-md-6 col-md-offset-3">
-			<main>
-				<form action="/admin/reset-password/{{.hash}}" method="POST" class="form-horizontal">
-					<div class="login_wrapper">
-						<div class="login_header">
-							<h4>Password reset</h4>
-						</div>
+	<main>
+		<form action="/admin/reset-password/{{.hash}}" method="POST">
+			<h2>Password reset</h2>
 
-						<div class="login_body">
-							{{template "admin/flash" .}}
+			{{template "admin/flash" .}}
 
-							<div class="form-group">
-								<label for="password" class="col-sm-2 control-label">Password</label>
-								<div class="col-sm-10">
-									<input type="password" required="required" autocomplete="off" class="form-control" name="password" id="password" placeholder="Password...">
-								</div>
-							</div>
+			<label for="password">Password</label>
+			<input type="password" required="required" autocomplete="off" name="password" id="password" placeholder="Password...">
 
-							<div class="form-group">
-								<label for="reenter_password" class="col-sm-2 control-label">Re-enter password</label>
-								<div class="col-sm-10">
-									<input type="password" required="required" autocomplete="off" class="form-control" name="reenter_password" id="reenter_password" placeholder="Re-enter password...">
-								</div>
-							</div>
+			<label for="reenter_password">Re-enter password</label>
+			<input type="password" required="required" autocomplete="off" name="reenter_password" id="reenter_password" placeholder="Re-enter password...">
 
-							{{ .csrfField }}
+			{{ .csrfField }}
 
-							<div class="form-group">
-								<div class="col-sm-offset-2 col-sm-10">
-									<input type="submit" class="btn btn-primary pull-right" value="Send reset instruction">
-								</div>
-							</div>
-						</div>
-					</div>
-				</form>
-			</main>
-		</div>
-	</div>
+			<div class="button-group">
+				<input type="submit" value="Send reset instruction">
+			</div>
+		</form>
+	</main>
 </body>
 </html>
 {{end}}
