--- a/templates/admin/article_add.html
+++ b/templates/admin/article_add.html
@@ -9,21 +9,17 @@
     <h2>Write an article</h2>
 
     <form action="/admin/article/new" method="post">
-	    <div class="form-group">
-		    <label for="headline">Headline</label>
-		    <input type="text" class="form-control" id="headline" name="headline" placeholder="Headline..." {{if .article.Headline}}value="{{.article.Headline}}"{{end}} required>
-	    </div>
+		<label for="headline">Headline</label>
+		<input type="text" id="headline" name="headline" placeholder="Headline..." {{if .article.Headline}}value="{{.article.Headline}}"{{end}} required>
 
-	    <div class="form-group">
-		    <label for="content">Content</label>
-		    <textarea class="form-control" rows="25" id="content" name="content" placeholder="Content...">{{.article.Content}}</textarea>
-	    </div>
+		<label for="content">Content</label>
+		<textarea rows="25" id="content" name="content" placeholder="Content...">{{.article.Content}}</textarea>
 
 	    {{ .csrfField }}
 
 	    <div class="button-group">
-			<button name="action" value="save" class="button">Save</button>
-			<button name="action" formtarget="_blank" value="preview" class="button">Preview</button>
+			<button name="action" value="save">Save</button>
+			<button name="action" formtarget="_blank" value="preview">Preview</button>
 		</div>
     </form>
 </main>
