--- a/templates/admin/site_edit.html
+++ b/templates/admin/site_edit.html
@@ -1,32 +1,27 @@
 {{define "admin/site_edit"}}
 {{template "admin/header" .}}
 {{template "admin/navigation" .}}
-
 <main>
 	{{template "skel/flash" .}}
 	<h2>Update site</h2>
 
 	{{with .site}}
 		<form action="/admin/site/edit/{{.ID}}" method="post">
-			<div class="form-group">
-				<label for="headline">Title</label>
-				<input type="text" class="form-control" value="{{.Title}}" id="title" name="title" placeholder="Title..." required>
-			</div>
+			<label for="headline">Title</label>
+			<input type="text" value="{{.Title}}" id="title" name="title" placeholder="Title..." required>
 
-			<div class="form-group">
-				<label for="headline">Link</label>
-				<input type="text" class="form-control" value="{{.Link}}" id="link" name="link" placeholder="Link..." required>
-			</div>
+			<label for="headline">Link</label>
+			<input type="text" value="{{.Link}}" id="link" name="link" placeholder="Link..." required>
 
-			<div class="form-group">
-				<label for="content">Content</label>
-				<textarea class="form-control" rows="25" id="content" name="content">{{.Content}}</textarea>
-			</div>
+			<label for="content">Content</label>
+			<textarea rows="25" id="content" name="content">{{.Content}}</textarea>
 
 			{{ $.csrfField }}
-
-			<button name="action" value="save" class="button">Save</button>
-			<button name="action" formtarget="_blank" value="preview" class="button">Preview</button>
+			
+			<div class="button-group">
+				<button name="action" value="save">Save</button>
+				<button name="action" formtarget="_blank" value="preview">Preview</button>
+			</div>
 		</form>
 	{{end}}
 </main>
