--- a/templates/admin/sites.html
+++ b/templates/admin/sites.html
@@ -7,9 +7,9 @@
 
 	<h2>Site management</h2>
 
-	<p><a href="/admin/site/new" class="btn btn-default btn-md">Add a site</a></p>
+	<p><a href="/admin/site/new">Add a site</a></p>
 
-	<table class="table">
+	<table>
 		<thead>
 			<tr>
 				<th></th>
