--- a/templates/admin/user_edit.html
+++ b/templates/admin/user_edit.html
@@ -8,26 +8,18 @@
 
 		{{with .user}}
 			<form action="/admin/user/edit/{{.ID}}" method="post">
-				<div class="form-group">
-					<label for="username">Username</label>
-					<input type="username" class="form-control" name="username"  value="{{.Username}}" id="username" placeholder="Username...">
-				</div>
-
-				<div class="form-group">
-					<label for="email">E-mail</label>
-					<input type="email" class="form-control" name="email"  value="{{.Email}}" id="email" placeholder="E-Mail...">
-				</div>
-
-				<div class="form-group">
-					<label for="displayname">Display name</label>
-					<input type="text" class="form-control" value="{{.DisplayName}}" id="displayname" name="displayname" placeholder="Display name...">
-				</div>
-
-				<div class="form-group">
-					<label for="password">New password</label>
-					<input type="password" class="form-control" id="password" name="password" placeholder="Password...">
-				</div>
-
+				<label for="username">Username</label>
+				<input type="username" name="username"  value="{{.Username}}" id="username" placeholder="Username...">
+				
+				<label for="email">E-mail</label>
+				<input type="email" name="email"  value="{{.Email}}" id="email" placeholder="E-Mail...">
+				
+				<label for="displayname">Display name</label>
+				<input type="text" value="{{.DisplayName}}" id="displayname" name="displayname" placeholder="Display name...">
+				
+				<label for="password">New password</label>
+				<input type="password" id="password" name="password" placeholder="Password...">
+			
 				<div class="checkbox">
 					<label><input type="checkbox" id="admin" name="admin" value="on"{{if .IsAdmin}} checked{{end}}>Admin?</label>
 				</div>
@@ -39,7 +31,7 @@
 				{{ $.csrfField }}
 
 				<div class="button-group">
-					<button name="action" value="update" class="button">Save</button>
+					<button name="action" value="update">Save</button>
 				</div>
 			</form>
 		{{end}}
