--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -9,40 +9,28 @@
 
 	{{with .user}}
 		<form action="/admin/user/profile" method="post">
-			<div class="form-group">
-				<label for="username">Username</label>
-				<input type="username" class="form-control" name="username"  value="{{.Username}}" id="username" placeholder="Username...">
-			</div>
+			<label for="username">Username</label>
+			<input type="username" name="username"  value="{{.Username}}" id="username" placeholder="Username...">
 
-			<div class="form-group">
-				<label for="email">E-mail</label>
-				<input type="email" class="form-control" value="{{.Email}}" name="email" id="email" placeholder="E-mail..." required>
-			</div>
+			<label for="email">E-mail</label>
+			<input type="email" value="{{.Email}}" name="email" id="email" placeholder="E-mail..." required>
 
-			<div class="form-group">
-				<label for="displayname">Display name</label>
-				<input type="text" class="form-control" value="{{.DisplayName}}" id="displayname" name="displayname" placeholder="Display name..." required>
-			</div>
+			<label for="displayname">Display name</label>
+			<input type="text" value="{{.DisplayName}}" id="displayname" name="displayname" placeholder="Display name..." required>
 
-			<div class="form-group">
-				<label for="current_password">Current password</label>
-				<input type="password" class="form-control" id="current_password" name="current_password" placeholder="Current password..." required>
-			</div>
+			<label for="current_password">Current password</label>
+			<input type="password" id="current_password" name="current_password" placeholder="Current password..." required>
 
-			<div class="form-group">
-				<label for="password">New password</label>
-				<input type="password" class="form-control" id="password" name="password" placeholder="Password...">
-			</div>
+			<label for="password">New password</label>
+			<input type="password" id="password" name="password" placeholder="Password...">
 
-			<div class="form-group">
-				<label for="retyped_password">Retype password</label>
-				<input type="password" class="form-control" id="retyped_password" name="retyped_password" placeholder="Retype Password...">
-			</div>
+			<label for="retyped_password">Retype password</label>
+			<input type="password" id="retyped_password" name="retyped_password" placeholder="Retype Password...">
 
 			{{ $.csrfField }}
 			
 			<div class="button-group">
-				<button name="action" value="update" class="btn btn-primary" style="float:right">Speichern</button>
+				<button name="action" value="update">Speichern</button>
 			</div>
 		</form>
 	{{end}}
