--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -7,9 +7,9 @@
 	
 	<h2>User management</h2>
 
-	<p><a href="/admin/user/new" class="btn btn-default btn-md">Add a user</a></p>
+	<p><a href="/admin/user/new">Add a user</a></p>
 
-	<table class="table">
+	<table>
 		<thead>
 			<tr>
 			<th>Last modified</th>
@@ -40,7 +40,6 @@
 	</table>
 
 	{{template "skel/pagination" .}}
-
 </main>
 
 {{template "admin/footer"}}
