--- a/templates/front/article.html
+++ b/templates/front/article.html
@@ -10,6 +10,8 @@
 		<h2 class="article_link">{{.Headline}}</h2>
 		<p class="article_info">written by {{.Author.DisplayName}} on {{.PublishedOn.Time | FormatDate}}</p>
 
+		<b>{{.Teaser}}</b>
+
 		{{.Content | ParseMarkdown}}
 
 		<a href="/">&laquo; Go back</a>
