--- a/templates/front/header.html
+++ b/templates/front/header.html
@@ -8,6 +8,9 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" href="/assets/css/master.css">
 		<link rel="icon" href="/assets/favicon.ico" type="image/vnd.microsoft.icon">
+		{{if .article}}
+		<meta name="description" content="{{.article.Teaser}}">
+		{{end}}
     </head>
 
 <body>
