configs / rss feeds

--- a/templates/admin/footer.html
+++ b/templates/admin/footer.html
@@ -1,6 +1,6 @@
 {{define "admin/footer"}}
 <footer>
-	<p>Version: {{AppVersion}}</p>
+	<p>Version: {{BuildVersion}}</p>
 </footer>
 
 <script type="text/javascript">
