--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -10,8 +10,8 @@
 			<label for="password">Password</label>
 			<input type="password" required="required" autocomplete="off" name="password" id="password" placeholder="Password...">
 
-			<label for="reenter_password">Re-enter password</label>
-			<input type="password" required="required" autocomplete="off" name="reenter_password" id="reenter_password" placeholder="Re-enter password...">
+			<label for="password_repeat">Re-enter password</label>
+			<input type="password" required="required" autocomplete="off" name="password_repeat" id="password_repeat" placeholder="Re-enter password...">
 
 			{{ .csrfField }}
 
