renamed map key for index page

--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -12,7 +12,7 @@
 			{{end}}
 		{{end}}
 
-		{{range .indexed_articles}}
+		{{range .articles}}
 			<ul>
 				<li class="year">
 					<div class="year">
